Create separate partial for the navigation bar

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,60 +1,43 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
-    <head>
-        <meta charset='utf-8'> 
-        <meta name="viewport" content="width=device-width">
-        <link href="/stylesheets/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
-        <link href="/stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
-        <link href="/stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
-        <title><%= title %></title>
-    </head>
-
-    <body>
-        <div id="wrapper">
-            <%- include('partials/header.ejs') %>
-            <article id="about_me_content">
-                <div id="about_me_writing">
-                    <p>Hey hey!
-                        My name is Arvin Ziba. 
-                        I am a second-year student at Ontario Tech University, majoring in networking and IT security. 
-                        From my studies there, I gained a solid grasp in most of the content covered in CCNA plus about 85 hours of practical experience, through our state-of-the-art networking lab. 
-                        I also have a plenty of experience in programming in Python, C++, and JavaScript (more so in Python) from my courses in Python, data structures and algorithms, web and script programming, and statistics. 
-                        Below is a list of some of my completed courses at Ontario Tech. 
-                        I encourage you check out my “Projects” page for more insight into my professional experience. 
-                        My hobbies include Dungeons and Dragons, board games in general, video games, and hacking. 
-                        Hacking is a big one. 
-                        I have a passion for experimenting with networks and seek ways to breach their security (legally, of course). 
-                        This is something I regularly do on my home lab. 
-                        Anyways, that’s a little about myself. Thanks for reading. 
-                        </p> 
-                </div>
-                <figure id="profile_picture">
-                    <img src="images/portrait.png" alt="If you're seeing this, the image failed to load.">
-                </figure>       
-                <div id="university_courses">
-                    <h3>Completed University Courses</h3>
-                    <ul>
-                        <li>Intro to Networking I</li>
-                        <li>Intro to Networking II</li>
-                        <li>Advanced Networking I</li>
-                        <li>Intro to Programming for IT</li>
-                        <li>Object Oriented Programming for IT</li>
-                        <li>Intro to Computer Security</li>
-                        <li>Management of the Enterprise</li>
-                        <li>Computer Architecture</li>
-                        <li>Statistics for IT</li>
-                    </ul>
-                </div>
-                <div id="about_me_video">
-                    <video controls poster="images/selfie.jpg" preload="auto" muted loop>
-                        <source src="videos/about-video.mp4" type="video/mp4">
-                        <source src="videos/about-video.ogv" type="video/ogg">
-                    </video>
-                </div>
-            </article>
-            <%- include('partials/footer') %>
-        </div>
-    </body>
-</html>
+<%- include('partials/header') %>
+<%- include('partials/navbar') %>
+<article id="about_me_content">
+    <div id="about_me_writing">
+        <p>Hey hey!
+            My name is Arvin Ziba. 
+            I am a second-year student at Ontario Tech University, majoring in networking and IT security. 
+            From my studies there, I gained a solid grasp in most of the content covered in CCNA plus about 85 hours of practical experience, through our state-of-the-art networking lab. 
+            I also have a plenty of experience in programming in Python, C++, and JavaScript (more so in Python) from my courses in Python, data structures and algorithms, web and script programming, and statistics. 
+            Below is a list of some of my completed courses at Ontario Tech. 
+            I encourage you check out my “Projects” page for more insight into my professional experience. 
+            My hobbies include Dungeons and Dragons, board games in general, video games, and hacking. 
+            Hacking is a big one. 
+            I have a passion for experimenting with networks and seek ways to breach their security (legally, of course). 
+            This is something I regularly do on my home lab. 
+            Anyways, that’s a little about myself. Thanks for reading. 
+            </p> 
+    </div>
+    <figure id="profile_picture">
+        <img src="images/portrait.png" alt="If you're seeing this, the image failed to load.">
+    </figure>       
+    <div id="university_courses">
+        <h3>Completed University Courses</h3>
+        <ul>
+            <li>Intro to Networking I</li>
+            <li>Intro to Networking II</li>
+            <li>Advanced Networking I</li>
+            <li>Intro to Programming for IT</li>
+            <li>Object Oriented Programming for IT</li>
+            <li>Intro to Computer Security</li>
+            <li>Management of the Enterprise</li>
+            <li>Computer Architecture</li>
+            <li>Statistics for IT</li>
+        </ul>
+    </div>
+    <div id="about_me_video">
+        <video controls poster="images/selfie.jpg" preload="auto" muted loop>
+            <source src="videos/about-video.mp4" type="video/mp4">
+            <source src="videos/about-video.ogv" type="video/ogg">
+        </video>
+    </div>
+</article>
+<%- include('partials/footer') %>
