--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,22 +1,21 @@
-<header>
-    <div id="banner">
-        <h1>ARVIN ZIBA</h1>
-        <h3><%= heading %></h3>
-    </div>
-    <div id="navigation_menu">
-        <nav>
-            <div class="navigation_button">
-                <a href="/">Home</a>
-            </div>
-            <div class="navigation_button">
-                <a href="projects">Projects</a>
-            </div>
-            <div class="navigation_button">
-                <a href="contact">Contact</a>
-            </div>
-            <div class="navigation_button">
-                <a href="about">About</a>
-            </div>
-        </nav>
-    </div>
-</header>
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta charset='utf-8'> 
+        <meta name="viewport" content="width=device-width">
+        <link href="/stylesheets/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
+        <link href="/stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
+        <link href="/stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+        <script src="/javascripts/app.js"></script>
+        <title><%= title %></title>
+    </head>
+
+    <body>
+        <div id="wrapper">
+            <header>
+                <div id="banner">
+                    <h1>ARVIN ZIBA</h1>
+                    <h3><%= heading %></h3>
+                </div>
+            </header>
