--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,95 +1,79 @@
-<!DOCTYPE html>
+<%- include('partials/header') %>
+<%- include('partials/navbar') %>
+    <article>
+        <section>
+            <div class="project_heading">
+                <h3>Home Networking Lab</h3>
+            </div>
+            <div class="project_desc">
+                <p>My most thrilling project yet is my networking lab. 
+                    This is where I do most of the lab work for my Cisco certifications and networking courses. 
+                    I also use it as a dummy network for testing my network attacks. 
+                    More hardware will be deployed, and this section will be updated accordingly.</p> 
+            </div>
+            <figure class="image_container"> 
+                <img src="images/networking-lab.png" alt="If you're seeing this, the image failed to load.">
+            </figure>
+            <div id="p1_hardware_applications">
+                <div id="p1_hardware">
+                    <h3>Hardware</h3>
+                        <ul>
+                            <li>Cisco 1811 Integrated Services Router</li>
+                            <li>Cisco Meraki MS220 switch</li>
+                            <li>Cisco Catalyst 3560 v2 series multilayer switch</li>
+                            <li>Cisco Catalyst 3750 multilayer switch</li>
+                            <li>Cisco IP Phone 7945</li>
+                            <li>Mac Mini running VyOS Linux </li>
+                        </ul>
+                </div>
+                <div id="p1_applications">
+                    <h3>Applications and Services</h3>
+                    <p>I try to replicate actual production environments by configuring multiple services at once. 
+                        Here are some of the contents of my best working configuration file.</p>
+                    <ul>
+                        <li>Access control lists</li>
+                        <li>Authentication, authorization, and accounting (AAA) with RADIUS</li>
+                        <li>DHCP snooping</li>
+                        <li>DNS name resolution</li>
+                        <li>Dynamic ARP inspection</li>
+                        <li>Hot-standby routing</li>
+                        <li>In-band management through SSH</li>
+                        <li>Network address translation</li>
+                        <li>Syslog messaging to a centralized server</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        
+        <section>
+            <div class="project_heading">
+                <h3>CSV-Data Management Application</h3>
+            </div>
+            <div class="project_desc">
+                <p>A Python script that performs the functions listed in the user-interface snapshot (left) on the data snippet (right). 
+                    Modules from the standard library or third-party libraries do not contribute to the algorithm’s functionality. </p>
+            </div>
+            <figure class="image_container"> 
+                <img src="images/csv-data-manager.png" alt="If you're seeing this, the image failed to load.">
+            </figure>
+        </section>
 
-<html lang="en">
-
-    <head>
-        <meta charset='utf-8'> 
-        <meta name="viewport" content="width=device-width">
-        <link href="/stylesheets/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
-        <link href="/stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
-        <link href="/stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
-        <title><%= title %></title>
-    </head>
-
-    <body>
-        <div id="wrapper">
-            <%- include('partials/header') %>
-            <article>
-                <section>
-                    <div class="project_heading">
-                        <h3>Home Networking Lab</h3>
-                    </div>
-                    <div class="project_desc">
-                        <p>My most thrilling project yet is my networking lab. 
-                            This is where I do most of the lab work for my Cisco certifications and networking courses. 
-                            I also use it as a dummy network for testing my network attacks. 
-                            More hardware will be deployed, and this section will be updated accordingly.</p> 
-                    </div>
-                    <figure class="image_container"> 
-                        <img src="images/networking-lab.png" alt="If you're seeing this, the image failed to load.">
-                    </figure>
-                    <div id="p1_hardware_applications">
-                        <div id="p1_hardware">
-                            <h3>Hardware</h3>
-                                <ul>
-                                    <li>Cisco 1811 Integrated Services Router</li>
-                                    <li>Cisco Meraki MS220 switch</li>
-                                    <li>Cisco Catalyst 3560 v2 series multilayer switch</li>
-                                    <li>Cisco Catalyst 3750 multilayer switch</li>
-                                    <li>Cisco IP Phone 7945</li>
-                                    <li>Mac Mini running VyOS Linux </li>
-                                </ul>
-                        </div>
-                        <div id="p1_applications">
-                            <h3>Applications and Services</h3>
-                            <p>I try to replicate actual production environments by configuring multiple services at once. 
-                                Here are some of the contents of my best working configuration file.</p>
-                            <ul>
-                                <li>Access control lists</li>
-                                <li>Authentication, authorization, and accounting (AAA) with RADIUS</li>
-                                <li>DHCP snooping</li>
-                                <li>DNS name resolution</li>
-                                <li>Dynamic ARP inspection</li>
-                                <li>Hot-standby routing</li>
-                                <li>In-band management through SSH</li>
-                                <li>Network address translation</li>
-                                <li>Syslog messaging to a centralized server</li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="project_heading">
-                        <h3>CSV-Data Management Application</h3>
-                    </div>
-                    <div class="project_desc">
-                        <p>A Python script that performs the functions listed in the user-interface snapshot (left) on the data snippet (right). 
-                            Modules from the standard library or third-party libraries do not contribute to the algorithm’s functionality. </p>
-                    </div>
-                    <figure class="image_container"> 
-                        <img src="images/csv-data-manager.png" alt="If you're seeing this, the image failed to load.">
-                    </figure>
-                </section>
-
-                <section>
-                    <div class="project_heading">
-                        <h3>Least-Cost Path Finder</h3>
-                    </div>
-                    <div class="project_desc">
-                        <p>A Python script that applies Dijkstra’s Shortest Path First algorithm to a CSV file representation of a graph. 
-                            Each node in the graph represents a destination, and each edge represents a path.
-                            The algorithm finds the least costly path from a start point to each charging station in the graph (denoted by the charger symbol).
-                        This was a collaborative project with GitHub user <a href="https://github.com/ellieInfinity">ellieinfinity</a> as the other contributer.</p>
-                    </div>
-                    <figure class="image_container">
-                        <img src="images/path-finder-interface.png" alt="If you're seeing this, the image failed to load.">  
-                    </figure>
-                    <figure class="image_container">
-                        <img src="images/path-finder-data.png" alt="If you're seeing this, the image failed to load.">
-                    </figure>
-                </section>
-            </article>
-            <%- include('partials/footer') %>
-        </div>
-    </body>
-</html>
+        <section>
+            <div class="project_heading">
+                <h3>Least-Cost Path Finder</h3>
+            </div>
+            <div class="project_desc">
+                <p>A Python script that applies Dijkstra’s Shortest Path First algorithm to a CSV file representation of a graph. 
+                    Each node in the graph represents a destination, and each edge represents a path.
+                    The algorithm finds the least costly path from a start point to each charging station in the graph (denoted by the charger symbol).
+                This was a collaborative project with GitHub user <a href="https://github.com/ellieInfinity">ellieinfinity</a> as the other contributer.</p>
+            </div>
+            <figure class="image_container">
+                <img src="images/path-finder-interface.png" alt="If you're seeing this, the image failed to load.">  
+            </figure>
+            <figure class="image_container">
+                <img src="images/path-finder-data.png" alt="If you're seeing this, the image failed to load.">
+            </figure>
+        </section>
+    </article>
+<%- include('partials/footer') %>
