--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,12 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<%- include('partials/header') %>
+<%- include('partials/navbar') %>
+
+<div id="error_container">
+    <h1><%= message %></h1>
+    <h2><%= error.status %></h2>
+    <% if(error.status == 404) { %>
+        <p>Maybe an incorrect URI.</p>
+    <% } %>
+</div>
+
+<%- include('partials/footer') %>
