--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,8 @@
         <link href="/stylesheets/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
         <link href="/stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
         <link href="/stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
-        <script src="/javascripts/app.js"></script>
+        <link rel="stylesheet" href="@fortawesome/fontawesome-free/css/all.min.css"> <!-- Link to CSS stylesheet for fontawesome templates --> 
+        <script src="/javascripts/app.js" defer></script>
         <title><%= title %></title>
     </head>
 
