--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
     <h1><%= message %></h1>
     <h2><%= error.status %></h2>
     <% if(error.status == 404) { %>
-        <p>Maybe an incorrect URI.</p>
+        <p>Possibly a bad URI.</p>
     <% } %>
 </div>
 
