--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,13 +2,13 @@
     <address>
         <div id="social_menu">
             <div class="navigation_button">
-                <a href="https://github.com/ArvinoBoro">GitHub</a>
+                <a href="https://github.com/ArvinoBoro" style="text-decoration: underline"><i class="fa-brands fa-github fa-2x"></i></a>
             </div>
             <div class="navigation_button">
-                <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/" style="text-decoration: underline"><i class="fa-brands fa-linkedin fa-2x"></i></a>
             </div>
             <div class="navigation_button">
-                <a href="mailto:arvin.ziba@ontariotechu.net">Email Me</a>
+                <a href="mailto:arvin.ziba@ontariotechu.net" style="text-decoration: underline"><i class="fa-solid fa-envelope fa-2x"></i></a>
             </div>
         </div>
     </address>
