--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,15 +8,15 @@
         <link href="/stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:570px) and (max-width:960px)">
         <link href="/stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:569px)">
         <link rel="stylesheet" href="@fortawesome/fontawesome-free/css/all.min.css"> <!-- Link to CSS stylesheet for fontawesome templates --> 
+        <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"> <!-- Link to CSS stylesheet for Bootstrap templates --> 
+        <script src="/bootstrap/dist/js/bootstrap.min.js" defer></script>  <!-- Link to JS script for Bootstrap functionality --> 
         <script src="/javascripts/app.js" defer></script>
         <title><%= title %></title>
     </head>
 
     <body>
         <div id="wrapper">
-            <header>
-                <div id="banner">
-                    <h1>ARVIN ZIBA</h1>
-                    <h3><%= heading %></h3>
-                </div>
+            <header class="container-fluid text-center p-4">
+                <h1>ARVIN ZIBA</h1>
+                <h3><%= heading %></h3>
             </header>
