--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,17 +1,9 @@
-<footer>
-    <address>
-        <div id="social_menu">
-            <div class="navigation_button">
-                <a href="https://github.com/ArvinoBoro" style="text-decoration: underline"><i class="fa-brands fa-github fa-2x"></i></a>
-            </div>
-            <div class="navigation_button">
-                <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/" style="text-decoration: underline"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-            </div>
-            <div class="navigation_button">
-                <a href="mailto:arvin.ziba@ontariotechu.net" style="text-decoration: underline"><i class="fa-solid fa-envelope fa-2x"></i></a>
-            </div>
-        </div>
-    </address>
+<footer class="container-fluid text-center p-4">
+    <address class="btn-group">
+      <a href="https://github.com/ArvinoBoro" type="button" class="btn btn-link" style="color: white"><i class="fa-brands fa-github fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/" type="button" class="btn btn-link" style="color: white"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+      <a href="mailto:arvin.ziba@ontariotechu.net" type="button" class="btn btn-link" style="color: white"><i class="fa-solid fa-envelope fa-2x"></i></a>
+    </address>  
     <p>&copy; Arvin Ziba 2024 </p>
 </footer>
 </div>
