--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -329,33 +329,15 @@
 
     /* Footer Start */
     footer {
-        background: -moz-linear-gradient(left, #070926 0%, #281259 100%);
-        background: -webkit-linear-gradient(top, #070926 0%, #281259 100%);
-        background: -o-linear-gradient(top, #070926 0%, #281259 100%);
-        background: linear-gradient(to right, #070926 0%,#281259  100%);
-        width: 100%;
-        height: 175px;
-        justify-content: center;
-        text-align: center;
-    }
-
-    #social_menu {
-        display: flex;
-        justify-content: center; 
-    }
-
-    #social_menu .navigation_button {
-        background-color: #73168C;
-    }
-
-    footer a {
-        font-style: normal; /* (4) Removes italics from the text. */ 
-    }
-    
-    footer p {
+        background: -moz-linear-gradient(left, #070926 50%, #281259 100%);
+        background: -webkit-linear-gradient(top, #070926 50%, #281259 100%);
+        background: -o-linear-gradient(top, #070926 50%, #281259 100%);
+        background: linear-gradient(to right, #070926 50%,#281259  100%);
         color: white; 
-        padding-top: 20px;
-        height: 80px;
+    }
+
+    footer p {
+        color: white;
     }
     /* Footer End */ 
 } 
