--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -35,7 +35,7 @@
                 <% } else { %>
                     <a class="nav-link" href="/about">
                 <% } %>
-                    <i class="fa-solid fa-user"></i> About </a> 
+                    <i class="fa-solid fa-user"></i> About <span class="badge bg-secondary">New</span> </a> 
                 </li>
             </ul>
         </div>
